--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -568,4 +568,24 @@
 		display: none;
 	}
 
+	.section-2 {
+		.cmb-4 {
+			margin-bottom: 0;
+		}
+		.py-4 {
+			padding: 1rem 0 !important;
+		}
+		.mb-5 {
+			margin-bottom: 1rem !important;
+		}
+	}
+	.section-3, .section-4 {
+		padding: 1rem 0;
+	}
+	.section-10 div.desc, .section-10 h2 {
+		margin-bottom: 1rem;
+	}
+	.section-12 .row {
+		padding: 50px 0px 10px !important;
+	}
 }
